ci: setup standard-release

--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "fix:lint": "eslint src --fix",
     "test": "mocha --require @babel/register ./test/**/*.spec.js",
     "prebuild": "rm -rf build",
-    "build": "babel src --out-dir ./build --source-maps"
+    "build": "babel src --out-dir ./build --source-maps",
+    "release": "standard-version"
   },
   "devDependencies": {
     "@babel/node": "^7.2.2",
