--- a/.huskyrc
+++ b/.huskyrc
@@ -1,6 +1,6 @@
 {
   "hooks": {
-    "pre-commit": "npm test",
+    "pre-commit": "yarn lint && yarn test",
     "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
   }
 }
