--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "release": "standard-version"
   },
   "devDependencies": {
+    "@babel/cli": "^7.2.3",
     "@babel/node": "^7.2.2",
     "@babel/plugin-transform-regenerator": "^7.0.0",
     "@babel/plugin-transform-runtime": "^7.2.0",
