--- a/package.json
+++ b/package.json
@@ -17,20 +17,16 @@
   "devDependencies": {
     "@babel/cli": "^7.2.3",
     "@babel/node": "^7.2.2",
-    "@babel/plugin-transform-regenerator": "^7.0.0",
     "@babel/plugin-transform-runtime": "^7.2.0",
     "@babel/preset-env": "^7.3.1",
     "@commitlint/cli": "^7.5.0",
     "@commitlint/config-conventional": "^7.5.0",
-    "@symfony/webpack-encore": "^0.22.4",
     "chai": "^4.2.0",
     "eslint": "^5.13.0",
     "eslint-plugin-babel": "^5.3.0",
     "husky": "^1.3.1",
     "mocha": "^5.2.0",
-    "standard-version": "^4.4.0",
-    "webpack": "^4.29.0",
-    "webpack-notifier": "^1.7.0"
+    "standard-version": "^4.4.0"
   },
   "dependencies": {
     "@babel/core": "^7.2.2",
