--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -26,3 +26,6 @@ steps:
 
 - script: yarn test
   displayName: 'Run mocha tests'
+
+- script: yarn build
+  displayName: 'Build project for standard node application'
