--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -8,7 +8,8 @@
     "parserOptions": {
         "ecmaVersion": 8,
         "ecmaFeatures": {
-            "jsx": true
+            "jsx": true,
+            "spread": true
         },
         "sourceType": "module"
     },
